@DEV-08 # change module to lessons; change logo

--- a/emodule/templates/emodule/quarter_detail.html
+++ b/emodule/templates/emodule/quarter_detail.html
@@ -45,7 +45,7 @@
         <!-- Archive Filter Bars Start -->
         <div class="archive-filter-bars">
             <div class="archive-filter-bar">
-                <p><span>{{module_list|length}}</span> modules available for you</p>
+                <p><span>{{module_list|length}}</span> lessons available for you</p>
             </div>
 
             <div class="archive-filter-bar">
