@DEV-09 # wording changes; removed copyright text

--- a/emodule/templates/emodule/base.html
+++ b/emodule/templates/emodule/base.html
@@ -236,12 +236,7 @@
                                         height="32" /></a>
 
                                 <div class="footer-widget__info">
-                                    <span class="title">Call us</span>
-                                    <span class="number">800 388 80 90</span>
-                                </div>
-                                <div class="footer-widget__info">
-                                    <p>123 Baguio City, Benguet 2616</p>
-                                    <p>contact@elearningsite.com</p>
+                                    <p>Nueva Ecija University of Science and Technology Gen. Tinio St., Cabanatuan City</p>
                                 </div>
 
                             </div>
@@ -273,6 +268,7 @@
             <!-- Footer Widget Area End -->
 
             <!-- Footer Copyright Area End -->
+            {% comment %}
             <div class="footer-copyright">
                 <div class="container">
                     <div class="copyright-wrapper text-center">
@@ -284,6 +280,7 @@
                     </div>
                 </div>
             </div>
+            {% endcomment %}
             <!-- Footer Copyright Area End -->
         </div>
         <!-- Footer End -->
