--- a/emodule/templates/emodule/module/module_detail.html
+++ b/emodule/templates/emodule/module/module_detail.html
@@ -185,7 +185,7 @@
 
                     <!-- Sidebar Widget Start -->
                     <div class="sidebar-widget border-0">
-                        <h3 class="sidebar-widget__title">Other Modules in this Quarter</h3>
+                        <h3 class="sidebar-widget__title">Other Lessons in this Quarter</h3>
 
                         <div class="sidebar-widget__course">
 
