--- a/emodule/templates/emodule/module/quarter_1/unit_i/lesson_1_unit_i.html
+++ b/emodule/templates/emodule/module/quarter_1/unit_i/lesson_1_unit_i.html
@@ -12,7 +12,7 @@
             <button class="nav-link active" id="id-lesson-{{quarter_id}}-{{module_id}}-tab-2" data-bs-toggle="tab"
                 data-bs-target="#lesson-{{module_id}}-2" type="button" role="tab" aria-controls="lesson-{{module_id}}-2"
                 aria-selected="true">
-                History of Basktery
+                History of Basketry
             </button>
         </div>
     </nav>
@@ -22,7 +22,7 @@
 
             <div class="tutor-course-main-segment">
                 <div class="tutor-course-segment tutor-course-wrap">
-                    <h5>History of Basktery</h5><br>
+                    <h5>History of Basketry</h5><br>
                     <p>
                         Basketry or basket making is one of the oldest crafts. Prehistoric humans used limbs, leaves, and 
                         vines woven together to carry their supplies. From these basic beginnings, different cultures have 
