--- a/emodule/templates/emodule/module/video_base.html
+++ b/emodule/templates/emodule/module/video_base.html
@@ -9,6 +9,10 @@
             <iframe src="{{video_lesson.video_url}}" title="{{video_lesson.title}}" allowfullscreen=""></iframe>
         </div>
     </div>
+    <div class="alert alert-info mt-5" role="alert">
+        <i class="fas fa-info"></i>
+        Video courtesy of Youtube
+    </div>
 </div>
 {% endfor %}
 {% endblock tab-conent-head %}
